force-app/main/default/objects/Car_Rental_Garage__c/Car_Rental_Garage__c.object-meta.xml
<CustomObject>
    <label>Car Rental Garage</label>
    <nameField>
        <label>Car Rental Garage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Rental Garages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>