force-app/main/default/objects/Car_Rental_Garage__c/fields/Car_Rental_Office__c.field-meta.xml
<CustomField>
    <fullName>Car_Rental_Office__c</fullName>
    <label>Car Rental Office</label>
    <referenceTo>Car_Rental_Office__c</referenceTo>
    <relationshipLabel>Car Rental Garages</relationshipLabel>
    <relationshipName>Car_Rental_Garages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>