force-app/main/default/objects/Car_Rental_Garage__c/fields/Total_Cars__c.field-meta.xml
<CustomField>
    <fullName>Total_Cars__c</fullName>
    <description>Quantity of cars in the garage.</description>
    <label>Total Cars</label>
    <summaryForeignKey>Car__c.Car_Rental_Garage__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>