force-app/main/default/objects/Car_Rental_Garage__c/fields/Total_Cars_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Cars_Price__c</fullName>
    <label>Total Cars Price</label>
    <summarizedField>Car__c.Price__c</summarizedField>
    <summaryForeignKey>Car__c.Car_Rental_Garage__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>