force-app/main/default/objects/Car_Rental_Garage__c/fields/Total_Luxury_Cars__c.field-meta.xml
<CustomField>
    <fullName>Total_Luxury_Cars__c</fullName>
    <description>Quantity of luxury cars in the garage.</description>
    <label>Total Luxury Cars</label>
    <summaryFilterItems>
        <field>Car__c.isLuxury__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Car__c.Car_Rental_Garage__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>